--- a/less/variables.less
+++ b/less/variables.less
@@ -20,6 +20,9 @@
 @clockDefaultBackgroundColor: rgba(0,0,0,0.2);
 @clockWrapperDefaultBackgroundColor: rgba(15,15,15,0.5);
 
+@backgroundOptionsHighlight: darken(@darkFontColor, 10%);
+@backgroundOptionsHighlightHover: darken(@darkFontColor, 5%);
+
 @minHeight: 600px;
 
 // ------------------------------------------ theme backgrounds
