--- a/template/option.hbs
+++ b/template/option.hbs
@@ -1,8 +1,8 @@
 <ul>
-  <li><i class="icon-tools active" data-content="general_options" >General</i></li>
-  <li><i class="icon-background" data-content="theme_options" >Theme</i></li>
-  <li><i class="icon-info" data-content="credits" >Credits</i></li>
-</ul>
+  <li><i class="icon-tools active" data-content="general_options" >General</i></li><!--
+  --><li><i class="icon-background" data-content="theme_options" >Theme</i></li><!--
+  --><li><i class="icon-info" data-content="credits" >Credits</i></li><!--
+--></ul>
 <div>
   <section id="general_options" class="show">
     <div class="checkbox">
