--- a/less/options-contributors.less
+++ b/less/options-contributors.less
@@ -4,7 +4,8 @@
     bottom: -5rem;
     left: 0;
     width: 100%;
-    background-color: darken(@darkFontColor, 10%);
+    background-color: @backgroundOptionsHighlight;
+    box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.75), inset -5px 10px 10px -10px rgba(0,0,0,0.75);
 
     > a {
       padding: 0.25rem 2rem;
@@ -14,7 +15,8 @@
       -webkit-transition: background-color 0.5s ease;
 
       &:hover { 
-        background-color: darken(@darkFontColor, 5%);
+        box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.75),inset -5px 10px 10px -10px rgba(0,0,0,0.75);
+        background-color: @backgroundOptionsHighlightHover;
       }
 
       img {
