--- a/less/theme.less
+++ b/less/theme.less
@@ -18,6 +18,8 @@
 .navyBlue { background: url(@navyBlue); }
 .redWine { background: url(@redWine); }
 .redMesh { background: url(@redMesh); }
+// .default { background-color: @darkFontColor; }
+.default { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(34,34,34,1)), color-stop(100%,rgba(14,14,14,1))); }
 
 body { 
   // transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -26,7 +28,6 @@ body {
     i.loader { -webkit-animation: spinReverse 2s linear infinite; }
   } 
   background-position: top center;
-  background-color: #333;
   font: @font;
   font-weight: @fontWeightNormal;
   text-shadow: @textShadowLight;
