--- a/less/options.less
+++ b/less/options.less
@@ -81,6 +81,17 @@
         -webkit-transform: translateX(0); 
         -webkit-transition: -webkit-transform 0.5s 0.5s ease;
       }
+
+      &#general_options div:last-of-type { margin-bottom: 1rem; }
+
+      > h1 {
+        font-size: 2rem;
+        margin: 0.5rem 0;
+        font-weight: @fontWeightLight;
+        color: @darkFontColor;
+
+        &:nth-of-type(n+2) { margin-top: 1.5rem; }
+      }
     }
   }
 
