--- a/template/unread.hbs
+++ b/template/unread.hbs
@@ -1,4 +1,4 @@
 <div class="unread">
-  <h1><strong>{{count}}</strong> unread mails in {{account}}</h1>
+  <h1><strong>{{count}}</strong> unread mail{{#if moreThenOne}}s{{/if}} in {{account}} {{#if label}}@ <strong>{{label}}</strong>{{/if}}</h1>
 </div>
 <ul></ul>
