added loading animation for every label change

--- a/less/main.less
+++ b/less/main.less
@@ -32,6 +32,15 @@ body {
   &,
   h1,
   h1 + p { -webkit-transition: color 0.8s ease; }
+
+  .loader { 
+    display: block;
+    font-size: 5rem;
+    margin-top: 2rem;
+    position: absolute;
+    width: 100%;
+    left: 0;
+  }
 }
 
 @import 'actions';
