--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,14 @@ body h1,
 body h1 + p {
   -webkit-transition: color 0.8s ease;
 }
+body .loader {
+  display: block;
+  font-size: 5rem;
+  margin-top: 2rem;
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
 #actions {
   position: absolute;
   right: 0rem;
@@ -298,11 +306,6 @@ body h1 + p {
   margin: 0 auto;
   width: 858px;
   height: calc(100% - 461px);
-}
-#mails > i {
-  font-size: 5rem;
-  margin-top: 3rem;
-  display: inline-block;
 }
 #mails .read h1 {
   padding-right: 3.5rem;
@@ -751,7 +754,7 @@ body {
 body.transition {
   -webkit-transition: background 0.8s ease;
 }
-body.transition i.loader {
+body.transition .loader {
   -webkit-animation: spinReverse 2s linear infinite;
 }
 body h1,
