--- a/template/option.hbs
+++ b/template/option.hbs
@@ -17,7 +17,7 @@
     </div>
     <h1>Mail</h1>
     <div class="mail_label">
-      <label for="{{label.name}}">Add a label name to check for new mails. Clear it, to use the inbox. </label>
+      <label for="{{label.name}}">Add a google label to check for new mails. Clear it, to use the inbox. </label>
       <input id="{{label.name}}" name="{{label.name}}" value="{{label.value}}" type="text" /> <span class="save">Save</span>
     </div>
   </section>
