--- a/less/variables.less
+++ b/less/variables.less
@@ -23,6 +23,9 @@
 @backgroundOptionsHighlight: darken(@darkFontColor, 10%);
 @backgroundOptionsHighlightHover: darken(@darkFontColor, 5%);
 
+@inputBackground: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+@inputBoxShadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
+
 @minHeight: 600px;
 
 // ------------------------------------------ theme backgrounds
