--- a/less/clock.less
+++ b/less/clock.less
@@ -22,7 +22,7 @@
   .flip-clock-wrapper {
     clear: both;
     width: auto;
-    min-height: auto;
+    min-height: 1%;
     display: inline-block;
     background-color: @clockWrapperDefaultBackgroundColor;
     padding: 2rem;
