add logo color themes

--- a/less/theme.less
+++ b/less/theme.less
@@ -9,6 +9,8 @@
 }
 
 .default { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(34,34,34,1)), color-stop(100%,rgba(14,14,14,1))); }
+.lightLogoColor { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@logoColorLight), color-stop(100%,darken(@logoColorLight,15%))); }
+.darkLogoColor { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,darken(@logoColorDark, 5%)), color-stop(100%,darken(@logoColorDark,15%))); }
 .theBeach { background: url(@theBeach); }
 .bluePrintGrungy { background: url(@bluePrintGrungy); }
 .bluePrintClean { background: url(@bluePrintClean); }
