--- a/template/option.hbs
+++ b/template/option.hbs
@@ -49,6 +49,7 @@
       <li>bxSlider<a href="http://bxslider.com/">Homepage</a></li>
       <li>jQuery<a href="http://jquery.com/">Homepage</a></li>
     </ul>
+    <img src="/icon/icon128.png" alt="extension icon" />
   </section>
   <div class="contributors">
     <a href="{{contributors.hacker.profile_link}}">
