--- a/less/options-contributors.less
+++ b/less/options-contributors.less
@@ -1,38 +1,36 @@
 #options {
   .contributors {
     position: absolute;
-    bottom: -5rem;
+    bottom: -6rem;
     left: 0;
     width: 100%;
-    background-color: @backgroundOptionsHighlight;
-    box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.75), inset -5px 10px 10px -10px rgba(0,0,0,0.75);
+    background: @shadowColor;
+    border-radius: @borderRadius 0 0 @borderRadius;
+    box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.5), inset -5px 10px 10px -10px rgba(0,0,0,0.5);
 
     > a {
       padding: 0.25rem 2rem;
       width: 8.875rem;
       display: inline-block;
       position: relative;
-      -webkit-transition: background-color 0.5s ease;
-
-      &:hover { 
-        box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.75),inset -5px 10px 10px -10px rgba(0,0,0,0.75);
-        background-color: @backgroundOptionsHighlightHover;
-      }
 
       img {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
         background-color: #fff;
+        margin: 5px;
       }
 
-      strong { display: block; }
-
-      strong, span {
-        color: @lightFontColorLighten;
-        font-weight: @fontWeightNormal;
+      strong { 
+        display: block; 
+        -webkit-transition: color 0.5s ease;
       }
+
+      &:hover strong { color: @logoColorLight; }
+
+      strong, span { font-weight: @fontWeightNormal; }
 
       span {
         position: absolute;
