--- a/less/options-input.less
+++ b/less/options-input.less
@@ -14,31 +14,33 @@
 
     input[type="text"] {
       background: @inputBackground;
-      border-radius: @borderRadius;
+      border-radius: @borderRadius / 2 0 0 @borderRadius / 2;
       box-shadow: @inputBoxShadow;
       border: none;
       padding: 0.25rem 0.5rem;
       font: @font;
-      font-weight: @fontWeightLight;
-      text-shadow: @textShadowLight;
-      color: @lightFontColor;
-      font-size: 1rem;
+      font-weight: @fontWeightNormal;
+      color: @darkFontColor;
+      font-size: 1.25rem;
       width: 20rem;
     }
 
     input[type="submit"] {
-      background-color: #fff;
-      box-shadow: 0px 0px 3px 0px rgba(0,0,0,.4);
-      padding: 0.25rem 0.5rem;
-      color: @darkFontColor;
-      font-size: 1rem;
-      margin-left: 0.25rem;
+      background-color: @darkFontColor;
+      box-shadow: @inputBoxShadow;
+      padding: 0.3rem 0.5rem;
+      position: relative;
+      top: -0.05rem;
+      color: @lightFontColor;
+      font-size: 1.25rem;
+      margin-left: -0.25rem;
+      font-weight: @fontWeightLight;
       cursor: pointer;
       border: none;
-      border-radius: @borderRadius;
+      border-radius: 0 @borderRadius / 2 @borderRadius / 2 0;
       -webkit-transition: background-color 0.5s ease;
 
-      &:hover { background-color: darken(#fff, 5%); }
+      &:hover { background-color: @backgroundOptionsHighlightHover; }
     }
   }
 
@@ -62,14 +64,14 @@
       width: 24px;
       height: 24px;
       background: @inputBackground;
-      border-radius: @borderRadius;
+      border-radius: @borderRadius / 2;
       box-shadow: @inputBoxShadow;
       display: inline-block;
       z-index: 10;
     }
     &:before { 
       opacity: 0;
-      color: @lightFontColor;
+      color: @logoColorDark;
       z-index: 20;
       font-size: 1.25rem;
       -webkit-transition: opacity 0.5s ease;
@@ -87,6 +89,7 @@
       height: 175px;
       width: 175px;
       cursor: pointer;
+      overflow: hidden;
 
       &:before {
         opacity: 0;
@@ -98,53 +101,37 @@
         -webkit-transition: opacity 0.5s ease;
       }
 
-      > .info,
       > .img {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
-        border-radius: @borderRadius;
-        -webkit-transition: -webkit-transform 0.5s ease;
-      }
-
-      > .img {
-        z-index: 10001;
       }
 
       > .info {
         position: absolute;
-        z-index: 10000;
-        background-color: @darkFontColor;
+        bottom: -4rem;
+        left: 0;
+        width: 100%;
+        height: 4rem;
+        -webkit-transition: bottom 0.5s ease;
+        z-index: 10005;
+        background-color: rgba(0,0,0,0.5);
         color: @lightFontColor;
-        -webkit-transform: scale(0.65);
+        font-weight: 100;
+
         > strong {
           position: absolute;
           top: 0;
-          font-size: 1.25rem;
-          font-weight: 300;
           left: 0;
-          text-align: center;
-          width: 100%;
-        }
-        > div {
-          position: absolute;
+          right: 0;
           bottom: 0;
-          left: 0;
-          width: 100%;
-
-          > span {
-            display: inline-block;
-            width: 45%;
-            text-align: center;
-            &:first-of-type { margin-right: 0.5rem; }
-          }
+          height: 1rem;
+          font-size: 1.25rem;
+          margin: auto;
+          text-align: center;
         }
       }
 
-      &:hover .img { -webkit-transform: scale(0.65); }
-      &:hover .info { -webkit-transform: scale(1); }
+      &:hover .info { bottom: 0; }
     }
   }
 }
