--- a/less/options.less
+++ b/less/options.less
@@ -3,15 +3,13 @@
   position: absolute;
   top: 3rem;
   right: -110%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(210,210,210,1)), to(rgba(240,240,240,1)));
-  box-shadow: 0px 3px 10px @shadowColor;
-  border-radius: @borderRadius 0 0 @borderRadius;
+  background: transparent;
   -webkit-transform: translateX(110%);
   -webkit-transition: -webkit-transform .5s ease-out;
   z-index: 9999;
   text-align: left;
   padding: 1rem 2rem;
-  height: calc(~"100% - 225px");
+  height: calc(~"100% - 245px");
   min-height: 375px;
   -webkit-animation: hideOnStart 0 linear 1s infinite alternate;
   &.show { -webkit-transform: translateX(0%); }
@@ -25,13 +23,15 @@
     left: -2rem;
     top: -1rem;
     z-index: 10003;
+    background: transparent;
 
     li {
       list-style: none;
       display: inline-block;
       width: 33.3%;
       text-align: center;
-      &:first-child i { border-radius: @borderRadius 0 0 0; }
+      &:first-child i { border-radius: @borderRadius 0 0 @borderRadius; }
+      background: transparent;
 
       i {
         padding-top: 1rem;
@@ -42,20 +42,21 @@
         display: block;
         padding-bottom: 0.5rem;
         color: @lightFontColorLighten;
-        background-color: @backgroundOptionsHighlight;
-        box-shadow: inset -5px -15px 10px -10px rgba(0,0,0,0.75);
+        background: @shadowColor;
+        box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.25);
 
         &:hover {
-          background-color: @backgroundOptionsHighlightHover;
+          background-color: darken(@shadowColor, 10%);
+          color: @logoColorDark;
+          &:before { color: @logoColorDark; }
         }
         &:before { 
           display: block; 
           color: @lightFontColorLighten;
         }
         &.active {
-          color: @darkFontColor;
-          background-color: transparent;
-          &:before { color: @darkFontColor; }
+          color: @logoColorDark;
+          &:before { color: @logoColorDark; }
           box-shadow: none;
         }
       }
@@ -67,12 +68,16 @@
     position: relative;
     margin: -1rem -2rem; 
     height: calc(~"100% - 130px");
+    border-radius: @borderRadius 0 0 @borderRadius;
+    background: #fff;
+    top: 1.25rem;
 
     section {
       position: absolute;
       width: calc(~"100% - 2rem");
       padding: 0.5rem 1rem 0;
-      height: 100%;
+      height: 96%;
+      top: 0.5rem;
       overflow-y: auto;
       overflow-x: hidden;
       -webkit-transition: -webkit-transform 0.5s ease;
@@ -96,6 +101,8 @@
   }
 
   #credits {
+    position: relative;
+
     > ul {
       margin: 0;
       padding: 0;
@@ -113,6 +120,13 @@
           &:hover { text-decoration: underline; }
         }
       }
+    }
+
+    > img {
+      margin: auto;
+      position: absolute;
+      right: 0rem;
+      bottom: 1rem;
     }
   }
 }
