--- a/less/options.less
+++ b/less/options.less
@@ -42,11 +42,11 @@
         display: block;
         padding-bottom: 0.5rem;
         color: @lightFontColorLighten;
-        background: @shadowColor;
+        background: @shadowColorDark;
+        @media (min-width: 1700px) { background: @shadowColor; }
         box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.25);
 
         &:hover {
-          background-color: darken(@shadowColor, 10%);
           color: @logoColorDark;
           &:before { color: @logoColorDark; }
         }
