--- a/less/variables.less
+++ b/less/variables.less
@@ -17,6 +17,7 @@
 
 // ------------------------------------------ colors
 @shadowColor: rgba(0, 0, 0, 0.4);
+@shadowColorDark: rgba(0,0,0, 0.8);
 
 @lightFontColor: #ddd;
 @lightFontColorLighten: lighten(@lightFontColor, 25%);
