--- a/less/options-input.less
+++ b/less/options-input.less
@@ -104,6 +104,7 @@
       > .img {
         width: 100%;
         height: 100%;
+        border-radius: @borderRadius;
       }
 
       > .info {
@@ -117,6 +118,7 @@
         background-color: rgba(0,0,0,0.5);
         color: @lightFontColor;
         font-weight: 100;
+        border-radius: 0 0 @borderRadius @borderRadius;
 
         > strong {
           position: absolute;
