add clock face change option

--- a/less/clock.less
+++ b/less/clock.less
@@ -33,6 +33,21 @@
       .flip-clock-dot { background-color: @lightFontColor; }
     }
 
+    .flip-clock-meridium {
+      position: absolute;
+      bottom: 0;
+      margin: auto;
+      left: 0;
+      right: 0;
+      height: 2rem;
+      width: 5rem;
+
+      a {
+        line-height: 2rem;
+        font-weight: @fontWeightNormal;
+      }
+    }
+
     ul {
       font: @font;
       font-weight: @fontWeightLight;
